--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,14 +23,19 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
     def room_version = "2.5.1"
-    def gson_version = "2.9.0"
+    def gson_version = "2.10.1"
+    def fragment_version = "1.5.6"
+
+    // Java language implementation
+    implementation "androidx.fragment:fragment:$fragment_version"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
