--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     def fragment_version = "1.5.6"
 
     // Java language implementation
+    //beautiful loading animation
+    implementation "com.wang.avi:library:2.1.3"
+
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation "com.google.code.gson:gson:$gson_version"
