--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     def gson_version = "2.10.1"
     def fragment_version = "1.5.6"
 
-
+    implementation "androidx.recyclerview:recyclerview:1.3.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation "com.google.code.gson:gson:$gson_version"
