--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -34,7 +37,7 @@ dependencies {
     def fragment_version = "1.5.6"
 
     implementation "androidx.recyclerview:recyclerview:1.3.0"
-    // For control over item selection of both touch and mouse driven selection
+//    // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
